fix: map range, color contrast

--- a/packages/kit/src/stepper.css
+++ b/packages/kit/src/stepper.css
@@ -40,8 +40,8 @@
 }
 
 .stepper-container.dark > .stepper-item.inactive {
-  color: var(--color-gray-2);
-  background-color: var(--color-gray-4);
+  color: var(--color-gray-1);
+  background-color: var(--color-gray-5);
 }
 
 /* line */
